fix: menu spacing

--- a/_sass/minima/skins/bedux.scss
+++ b/_sass/minima/skins/bedux.scss
@@ -11,6 +11,11 @@ body {
   color: initial;
 }
 
+.site-nav .trigger {
+  display: flex;
+  gap: 1rem;
+}
+
 .site-title,
 .site-title {
   display: flex;
